# backend/src/modules/auth/dto/password-recovery-request.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail } from 'class-validator';
+
+export class PasswordRecoveryRequestDto {
+  @ApiProperty({ example: 'alex@example.com' })
+  @IsEmail()
+  email!: string;
+}
